# crimsonx

./: .gitignore  README.md  nx.json
apps/discord-bot/: .dockerignore  .env.example  Cargo.toml  Dockerfile  railway.toml
apps/discord-bot/config/: config.toml
apps/discord-bot/docs/: DESIGN.md  WORKFLOW.md  workflow_crimsonbot.md
apps/discord-bot/migrations/: 001_create_guild_config.sql  002_create_members.sql  003_create_warnings.sql  004_create_mod_actions.sql  005_create_reaction_roles.sql  006_create_auto_mod_config.sql  007_create_stream_sessions.sql
apps/discord-bot/src/: config.rs  db.rs  error.rs  lib.rs  main.rs
apps/discord-bot/src/commands/: general.rs
apps/discord-bot/src/events/: member.rs
apps/discord-bot/src/integrations/: mod.rs  twitch.rs
apps/discord-bot/src/utils/: embeds.rs  mod.rs  permissions.rs
