[package]
name = "discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
serenity = { version = "0.12.5", features = ["client", "gateway", "model", "cache"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
